--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                                     <h3 class="skills__name"><img src="/assets/img/node.png" class="skills__logo"
                                             width="20px" alt=""> Node Js</h3>
 
-                                    <span class="skills__number">75%</span>
+                                    <span class="skills__number"></span>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__node"></span>
