--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                         <img src="/assets/img/certificate2.jpg" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
-                            <p>CSS Certificate</p>
+                            <!-- <p> Certificate</p> -->
                             <a href="/assets/pdf/certificate_uni.pdf"
                                 class="button button--flex button--small portfolio_-button">
                                 Preview
