--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
                         <a href="www.linkedin.com/in/chernet-tafesse-2b7425274" target="_blank" class="home__social-icon">
                             <i class="uil uil-linkedin-alt"></i>
                         </a>
+                        <a href="https://www.upwork.com/freelancers/~011e13960487814202" target="_blank" class="home__social-icon">
+                            <i class="uil uil-upWork-alt"></i>
+                        </a>
                     </div>
 
                     <div data-aos="fade-right" class="home__img">
@@ -145,6 +148,9 @@
                         </p>
                         <a href="#contact" class="button button--flex">
                             Contact Me <i class="uil uil-message button__icon"></i>
+                        </a>
+                        <a href="https://www.upwork.com/freelancers/~011e13960487814202" class="button button--flex">
+                            Hire Me <i class="uil uil-message button__icon"></i>
                         </a>
                     </div>
                 </div>
