--- a/index.html
+++ b/index.html
@@ -412,19 +412,31 @@
                         </div>
                     </div>
                     <!--==================== Certificate 2 ====================-->
+                    
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="/assets/img/certificate2.jpg" alt="" class="portfolio__img">
+                        <img src="/assets/img/android.png" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
-                            <!-- <p> Certificate</p> -->
-                            <a href="/assets/pdf/certificate_uni.pdf"
+                            <p>Android Certificate</p>
+                            <a href="/assets/pdf/android certificate.pdf"
                                 class="button button--flex button--small portfolio_-button">
                                 Preview
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
                         </div>
                     </div>
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="/assets/img/analysis.png" alt="" class="portfolio__img">
 
+                        <div class="portfolio__data">
+                            <p>Data Analysis Certificate</p>
+                            <a href="/assets/pdf/data analysis.pdf"
+                                class="button button--flex button--small portfolio_-button">
+                                Preview
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
         </section>
 
         <!--==================== SERVICES ====================-->
