--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <span class="section__subtitle"> My Introduction</span>
 
             <div data-aos="fade-left" class="about__container container grid">
-                <img src="assets/img/about.jpg" alt="" class="about__img" />
+                <img src="assets/img/pp.JPG" alt="" class="about__img" />
 
                 <div class="about__data">
                     <p class="about__description">
