--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
                         <p class="home__description">
                             High level experience in web design and development knowledge, producing quality work.
                         </p>
-                        <a href="#contact" class="button button--flex">
+                        <!-- <a href="#contact" class="button button--flex">
                             Contact Me <i class="uil uil-message button__icon"></i>
-                        </a>
+                        </a> -->
                         <a href="https://www.upwork.com/freelancers/~011e13960487814202" class="button button--flex">
                             Hire Me <i class="uil uil-message button__icon"></i>
                         </a>
