--- a/index.html
+++ b/index.html
@@ -653,6 +653,22 @@
                     </div>
                 </div>
 
+                <!--==================== PORTFOLIO 3 ====================-->
+                <div class="portfolio__content grid swiper-slide">
+                    <img src="/assets/img/realEstate.png" alt="" class="portfolio__img">
+
+                    <div class="portfolio__data">
+                        <h3 class="portfolio__title">Real Estate site</h3>
+                        <p class="portfolio__description">A modern real estate platform that connects buyers with their dream properties,
+                             offering comprehensive listings, detailed insights, and personalized search options.</p>
+                        <a href="https://real-esate-web.vercel.app/" class="button button--flex button--small portfolio_-button">
+                            Demo
+                            <i class="uil uil-arrow-right button__icon"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
 
                 <!-- Add Arrows -->
                 <div class="swiper-button-next">
