--- a/index.html
+++ b/index.html
@@ -617,6 +617,7 @@
                             <h3 class="portfolio__title">AgriConnect</h3>
                             <p class="portfolio__description">Developed a comprehensive platform to bridge farmers with buyers and logistics providers, empowering farmers in Ethiopia to 
                                 locate buyers for their produce and streamline shipping coordination</p>
+                                <p>Tools/Technology Used: Mern Stack</p>
                             <a href="https://agribuyer.vercel.app/" class="button button--flex button--small portfolio_-button">
                                 Demo
                                 <i class="uil uil-arrow-right button__icon"></i>
