--- a/index.html
+++ b/index.html
@@ -599,6 +599,7 @@
                             <h3 class="portfolio__title">Support Desk</h3>
                             <p class="portfolio__description"> It ensures that clients can promptly report their problems, receive timely assistance, and
                                 have their concerns addressed efficiently</p>
+                                <p>Tools/Technology Used:Laravel Php , Bootstrap</p>
                             <a href="#" class="button button--flex button--small portfolio_-button">
                                 Demo
                                 <i class="uil uil-arrow-right button__icon"></i>
@@ -613,6 +614,7 @@
                             <h3 class="portfolio__title">Furniture E-commerce</h3>
                             <p class="portfolio__description"> provides a dynamic platform where buyers and sellers can seamlessly
                                 connect</p>
+                                <p>Tools/Technology Used:React With Firebase</p>
                             <a href="#" class="button button--flex button--small portfolio_-button">
                                 Demo
                                 <i class="uil uil-arrow-right button__icon"></i>
@@ -629,6 +631,7 @@
                         <h3 class="portfolio__title">Real Estate site</h3>
                         <p class="portfolio__description">A modern real estate platform that connects buyers with their dream properties,
                              offering comprehensive listings, detailed insights, and personalized search options.</p>
+                             <p>Tools/Technology Used:ReactJs</p>
                         <a href="https://real-esate-web.vercel.app/" class="button button--flex button--small portfolio_-button">
                             Demo
                             <i class="uil uil-arrow-right button__icon"></i>
