--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
                             <h3 class="portfolio__title">AgriConnect</h3>
                             <p class="portfolio__description">Developed a comprehensive platform to bridge farmers with buyers and logistics providers, empowering farmers in Ethiopia to 
                                 locate buyers for their produce and streamline shipping coordination</p>
-                                <p>Tools/Technology Used: Mern Stack</p>
+                                <p class="portfolio__title">Tools/Technology Used: Mern Stack</p>
                             <a href="https://agribuyer.vercel.app/" class="button button--flex button--small portfolio_-button">
                                 Demo
                                 <i class="uil uil-arrow-right button__icon"></i>
@@ -581,7 +581,7 @@
                             <h3 class="portfolio__title">Support Desk</h3>
                             <p class="portfolio__description"> It ensures that clients can promptly report their problems, receive timely assistance, and
                                 have their concerns addressed efficiently</p>
-                                <p>Tools/Technology Used:Laravel Php , Bootstrap</p>
+                                <p class="portfolio__title">Tools/Technology Used:Laravel Php , Bootstrap</p>
                             <a href="#" class="button button--flex button--small portfolio_-button">
                                 Demo
                                 <i class="uil uil-arrow-right button__icon"></i>
@@ -596,7 +596,7 @@
                             <h3 class="portfolio__title">Furniture E-commerce</h3>
                             <p class="portfolio__description"> provides a dynamic platform where buyers and sellers can seamlessly
                                 connect</p>
-                                <p>Tools/Technology Used:React With Firebase</p>
+                                <p class="portfolio__title">Tools/Technology Used:React With Firebase</p>
                             <a href="#" class="button button--flex button--small portfolio_-button">
                                 Demo
                                 <i class="uil uil-arrow-right button__icon"></i>
