--- a/index.html
+++ b/index.html
@@ -573,6 +573,22 @@
                             </a>
                         </div>
                     </div>
+                     
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="/assets/img/marketing.png" alt="" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">Marketing Agency Site</h3>
+                            <p class="portfolio__description"> Empowering businesses with innovative marketing strategies 
+                                to drive growth and achieve lasting success for Users.</p>
+                                <h4 class="portfolio__title">Tools/Technology Used:React && Frame Motion</h4>
+                            <a href="#" class="button button--flex button--small portfolio_-button">
+                                Demo
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+
                     <!--==================== PORTFOLIO 2 ====================-->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="/assets/img/porto2.png" alt="" class="portfolio__img">
