--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="I'm Chernet,and this is my personal portfolio website..">
-    <meta name="keywords" content="Chernet, Chernet Deka, Chernet ">
+    <meta name="keywords" content="Chernet,  ">
 
     <!--==================== UNICONS ====================-->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
@@ -175,10 +175,12 @@
 
                 <div class="about__data">
                     <p class="about__description">
-                        I'm a seasoned full stack web developer with a strong track record of building scalable and robust web applications. My expertise encompasses a wide range of modern web technologies,
-                         including React, Node.js, Express, and Laravel for backend development. 
-                         I am passionate about writing clean, maintainable, and efficient code, ensuring that every project 
-                         I undertake is built to last and easy to work with.
+                        I’m a seasoned full stack web developer with a strong track record of building scalable 
+                        and robust web applications. My expertise spans a wide range of modern web technologies, 
+                        including React, Node.js, Express, and Laravel for backend development. Additionally, 
+                        I have experience in mobile application development using Flutter. I am passionate about
+                         writing clean, maintainable, and efficient code, ensuring that every project I 
+                         undertake is built to last and easy to work with.
                     </p>
 
                     <div class="about_info">
