--- a/index.html
+++ b/index.html
@@ -272,6 +272,18 @@
                                     <span class="skills__percentage skills__react"></span>
                                 </div>
                             </div>
+
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name"><img src="/assets/img/flutter.png" class="skills__logo"
+                                            width="20px" alt=""> Flutter</h3>
+                                    <!-- <span class="skills__number">80%</span> -->
+                                </div>
+                                <div class="skills__bar">
+                                    <span class="skills__percentage skills__flutter"></span>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
 
