--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
                 <div class="services__content">
                     <div>
                         <i class="uil uil-pen services__icon"></i>
-                        <h3 class="services__title">DataBase <br> Design</h3>
+                        <h3 class="services__title">Mobile <br> Application</h3>
                     </div>
 
                     <span class="button button--flex button--small button--link services__button">
@@ -556,7 +556,7 @@
 
                     <div class="services__modal">
                         <div class="services__modal-content">
-                            <h4 class="services__modal-title">DataBase <br> Designer</h4>
+                            <h4 class="services__modal-title">Mobile <br> Application</h4>
                             <i class="uil uil-times services__modal-close"></i>
                                 
                         </div>
