--- a/index.html
+++ b/index.html
@@ -603,6 +603,22 @@
                         </div>
                     </div>
 
+                    <!--==================== PORTFOLIO 2* ====================-->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="/assets/img/invent.png" alt="" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">Inventory Management system</h3>
+                            <p class="portfolio__description"> Our inventory management system offers real-time tracking of stock, easy 
+                                product organization, and seamless updates to ensure accurate inventory data. Designed for simplicity and efficiency, it helps businesses 
+                                optimize stock levels and improve operational workflows. Stay in control with our user-friendly platform.</p>
+                                <h4 class="portfolio__title">Mern Stack</h4>
+                            <a href="#" class="button button--flex button--small portfolio_-button">
+                                Demo
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
                     <!--==================== PORTFOLIO 2 ====================-->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="/assets/img/porto2.png" alt="" class="portfolio__img">
