--- a/index.html
+++ b/index.html
@@ -572,9 +572,42 @@
 
             <div data-aos="fade-right" class="portfolio__container container swiper-container">
                 <div class="swiper-wrapper">
+
+                     <!--==================== PORTFOLIO 1 ====================-->
+                     <div class="portfolio__content grid swiper-slide">
+                        <img src="/assets/img/flutterpro.jpg" alt="" class="portfolio__img" style="width: 100%; height: auto;">
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">FinTech App</h3>
+                            <p class="portfolio__description">Developed a comprehensive platform to bridge farmers with buyers and logistics providers, empowering farmers in Ethiopia to 
+                                locate buyers for their produce and streamline shipping coordination</p>
+                                <h4 class="portfolio__title">Tools/Technology Used: Flutter-Dart,Fl-chart</h4>
+                            <a href="" class="button button--flex button--small portfolio_-button">
+                                Demo
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                    
+                     <!--==================== PORTFOLIO 1 ====================-->
+                     <div class="portfolio__content grid swiper-slide">
+                        <img src="/assets/img/dash11.png" alt="" class="portfolio__img" style="width: 100%; height: auto;">
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">Revenue Dasboard ui</h3>
+                            <p class="portfolio__description">The ui interface designed to visualize key financial metrics effectively.
+                                 It features interactive charts and real-time data updates for insightful revenue tracking and analysis.</p>
+                                <h4 class="portfolio__title">Tools/Technology Used: NextJs,TailwindCss</h4>
+                            <a href="" class="button button--flex button--small portfolio_-button">
+                                Demo
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+
                     <!--==================== PORTFOLIO 1 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="/assets/img/porto1.png" alt="" class="portfolio__img">
+                        <img src="/assets/img/porto1.png" alt="" class="portfolio__img" style="width: 100%; height: auto;">
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">AgriConnect</h3>
@@ -589,7 +622,7 @@
                     </div>
                      
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="/assets/img/marketing.png" alt="" class="portfolio__img">
+                        <img src="/assets/img/marketing.png" alt="" class="portfolio__img" style="width: 100%; height: auto;">
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Marketing Agency Site</h3>
@@ -605,7 +638,7 @@
 
                     <!--==================== PORTFOLIO 2* ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="/assets/img/invent.png" alt="" class="portfolio__img">
+                        <img src="/assets/img/invent.png" alt="" class="portfolio__img" style="width: 100%; height: auto;">
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Inventory Management system</h3>
@@ -621,7 +654,7 @@
                     </div>
                     <!--==================== PORTFOLIO 2 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="/assets/img/porto2.png" alt="" class="portfolio__img">
+                        <img src="/assets/img/porto2.png" alt="" class="portfolio__img" style="width: 100%; height: auto;">
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Support Desk</h3>
@@ -636,7 +669,7 @@
                     </div>
                     <!--==================== PORTFOLIO 3 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="/assets/img/porto3.png" alt="" class="portfolio__img">
+                        <img src="/assets/img/porto3.png" alt="" class="portfolio__img" style="width: 100%; height: auto;">
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Furniture E-commerce</h3>
@@ -653,7 +686,7 @@
 
                 <!--==================== PORTFOLIO 3 ====================-->
                 <div class="portfolio__content grid swiper-slide">
-                    <img src="/assets/img/realEstate.png" alt="" class="portfolio__img">
+                    <img src="/assets/img/realEstate.png" alt="" class="portfolio__img" style="width: 100%; height: auto;">
 
                     <div class="portfolio__data">
                         <h3 class="portfolio__title">Real Estate site</h3>
