--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
                             <h3 class="portfolio__title">Marketing Agency Site</h3>
                             <p class="portfolio__description"> Empowering businesses with innovative marketing strategies 
                                 to drive growth and achieve lasting success for Users.</p>
-                                <h4 class="portfolio__title">Tools/Technology Used:React && Frame Motion</h4>
+                                <h4 class="portfolio__title">Tools/Technology Used:React,Frame Motion,TailwindCss</h4>
                             <a href="https://marketing-agency-dun.vercel.app/" class="button button--flex button--small portfolio_-button">
                                 Demo
                                 <i class="uil uil-arrow-right button__icon"></i>
@@ -645,7 +645,7 @@
                             <p class="portfolio__description"> Our inventory management system offers real-time tracking of stock, easy 
                                 product organization, and seamless updates to ensure accurate inventory data. Designed for simplicity and efficiency, it helps businesses 
                                 optimize stock levels and improve operational workflows. Stay in control with our user-friendly platform.</p>
-                                <h4 class="portfolio__title">Mern Stack</h4>
+                                <h4 class="portfolio__title">Tools/Technology Used:Mern Stack</h4>
                             <a href="#" class="button button--flex button--small portfolio_-button">
                                 Demo
                                 <i class="uil uil-arrow-right button__icon"></i>
@@ -692,7 +692,7 @@
                         <h3 class="portfolio__title">Real Estate site</h3>
                         <p class="portfolio__description">A modern real estate platform that connects buyers with their dream properties,
                              offering comprehensive listings, detailed insights, and personalized search options.</p>
-                             <h4 class="portfolio__title">Tools/Technology Used:ReactJs</h4>
+                             <h4 class="portfolio__title">Tools/Technology Used:ReactJs,Tailwindcss</h4>
                         <a href="https://real-esate-web.vercel.app/" class="button button--flex button--small portfolio_-button">
                             Demo
                             <i class="uil uil-arrow-right button__icon"></i>
