--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     </div>
 
                     <div class="about__buttons">
-                        <a download="" href="assets/pdf/CHERNET TAFESSE (3).pdf" class="button button--flex">
+                        <a download="" href="assets/pdf/CHERNET TAFESSE  (1).pdf" class="button button--flex">
                             Download CV <i class="uil uil-download-alt button__icon"></i>
                         </a>
                     </div>
@@ -579,8 +579,8 @@
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">FinTech App</h3>
-                            <p class="portfolio__description">Developed a comprehensive platform to bridge farmers with buyers and logistics providers, empowering farmers in Ethiopia to 
-                                locate buyers for their produce and streamline shipping coordination</p>
+                            <p class="portfolio__description">A fintech app built with Flutter offers a seamless, cross-platform experience
+                        for managing personal finances. Users can track expenses, set budgets, and make secure transactions with ease.</p>
                                 <h4 class="portfolio__title">Tools/Technology Used: Flutter-Dart,Fl-chart</h4>
                             <a href="" class="button button--flex button--small portfolio_-button">
                                 Demo
