--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                     <p class="about__description">
                         I’m a seasoned full stack web developer with a strong track record of building scalable 
                         and robust web applications. My expertise spans a wide range of modern web technologies, 
-                        including React, Node.js, Express, and Laravel for backend development. Additionally, 
+                        including React,NextJs Node.js, Express, and Laravel for backend development. Additionally, 
                         I have experience in mobile application development using Flutter. I am passionate about
                          writing clean, maintainable, and efficient code, ensuring that every project I 
                          undertake is built to last and easy to work with.
@@ -185,7 +185,7 @@
 
                     <div class="about_info">
                         <div>
-                            <span class="about__info-title">02+</span>
+                            <span class="about__info-title">03+</span>
                             <span class="about__info-name">Years <br />
                                 experience</span>
                         </div>
