--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
                             <p class="portfolio__description">A fintech app built with Flutter offers a seamless, cross-platform experience
                         for managing personal finances. Users can track expenses, set budgets, and make secure transactions with ease.</p>
                                 <h4 class="portfolio__title">Tools/Technology Used: Flutter-Dart,Fl-chart</h4>
-                            <a href="" class="button button--flex button--small portfolio_-button">
+                            <a href="https://github.com/Jrkusha5/fin_tech" class="button button--flex button--small portfolio_-button">
                                 Demo
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
