--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <span class="section__subtitle"> My Introduction</span>
 
             <div data-aos="fade-left" class="about__container container grid">
-                <img src="assets/img/pp.JPG" alt="" class="about__img" />
+                <img src="assets/img/photo2.png" alt="" class="about__img" />
 
                 <div class="about__data">
                     <p class="about__description">
@@ -224,7 +224,7 @@
 
                             <div>
                                 <h1 class="skills__title">Frontend developer</h1>
-                                <span class="skills__subtitle">More then 2 years</span>
+                                <span class="skills__subtitle">More then 3 years</span>
                             </div>
 
                             <i class="uil uil-angle-down skills__arrow"></i>
