--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     </div>
 
                     <div class="about__buttons">
-                        <a download="" href="assets/pdf/CHERNET TAFESSE  (2).pdf" class="button button--flex">
+                        <a download="" href="assets/pdf/CHERNET TAFESSE CV (3).pdf" class="button button--flex">
                             Download CV <i class="uil uil-download-alt button__icon"></i>
                         </a>
                     </div>
