--- a/index.html
+++ b/index.html
@@ -273,6 +273,18 @@
                                 </div>
                             </div>
 
+                             <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name"><img src="/assets/img/nextjs.png" class="skills__logo"
+                                            width="20px" alt=""> NextJs</h3>
+                                    <!-- <span class="skills__number">80%</span> -->
+                                </div>
+                                <div class="skills__bar">
+                                    <span class="skills__percentage skills__react"></span>
+                                </div>
+                            </div>
+
+
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name"><img src="/assets/img/flutter.png" class="skills__logo"
@@ -294,7 +306,7 @@
 
                             <div>
                                 <h1 class="skills__title">Backend developer</h1>
-                                <span class="skills__subtitle">More then 2 years</span>
+                                <span class="skills__subtitle">More then 3 years</span>
                             </div>
 
                             <i class="uil uil-angle-down skills__arrow"></i>
@@ -330,6 +342,17 @@
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__php"></span>
+                                </div>
+                            </div>
+
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name"><img src="/assets/img/net.png" class="skills__logo"
+                                            width="20px" alt=""> .Net Core</h3>
+                                    <!-- <span class="skills__number">78%</span> -->
+                                </div>
+                                <div class="skills__bar">
+                                    <span class="skills__percentage skills__python"></span>
                                 </div>
                             </div>
                             <div class="skills__data">
